--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,13 @@
-/*  your css code here. If applicable */
 body {
   font-family: Arial, sans-serif;
   padding: 40px;
 }
 
-h2 {
-  margin-bottom: 15px;
-}
-
-#band {
+#bands {
   list-style-type: none;
   padding: 0;
 }
 
-#band li {
+#bands li {
   padding: 6px 0;
 }
